# code-indexing

./: .gitignore  .pre-commit-cleanup.sh  LEGACY.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  semantic_pipeline.py
mcp_server/: README.md  USAGE.md  claude_desktop_config.json  requirements.txt  server.py  setup_claude.py  test_server.py
src/: __init__.py
src/code_indexer/: README.md  __main__.py
src/code_indexer/apps/: __init__.py
src/code_indexer/apps/cli/: __init__.py  __main__.py  main.py
src/code_indexer/apps/mcp/: README.md  __init__.py  __main__.py  main.py  requirements.txt  setup_claude.py
src/code_indexer/libs/: __init__.py
src/code_indexer/libs/common/: __init__.py  ai_agent.py  ast_analyzer.py  contextual_knowledge.py  embeddings.py  knowledge_graph.py  models.py  pipeline.py
test_code/: database.py  main.py  utils.py
